Bug 1695161 update m_writeIndex even when it would not wrap to buffer start. r=Gankra, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D107595